Review and port some of the changes in `FrameworkBenchmarks/frameworks/Java/vertx/` from commit 057c25b234bae395b1228d6afe0a7fd1c225a74d to commit 1838aa5df242f103a335b74c9095bc88f22643b1, and fix some typos
Some changes are not ported.

There is about 5% performance improvement in the JSON test as tested on my device.