@@ -10,17 +10,22 @@ RUN gradle --no-daemon installDist
 EXPOSE 8080
 
 CMD export JAVA_OPTS=" \
+    --enable-native-access=ALL-UNNAMED \
+    --sun-misc-unsafe-memory-access=allow \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
     -server \
     -XX:+UseNUMA \
     -XX:+UseParallelGC \
+    -XX:+UnlockDiagnosticVMOptions \
+    -XX:+DebugNonSafepoints \
+    -Djava.lang.Integer.IntegerCache.high=10000 \
     -Dvertx.disableMetrics=true \
-    -Dvertx.disableH2c=true \
     -Dvertx.disableWebsockets=true \
-    -Dvertx.flashPolicyHandler=false \
-    -Dvertx.threadChecks=false \
     -Dvertx.disableContextTimings=true \
-    -Dvertx.disableTCCL=true \
     -Dvertx.disableHttpHeadersValidation=true \
+    -Dvertx.cacheImmutableHttpResponseHeaders=true \
+    -Dvertx.internCommonHttpRequestHeadersToLowerCase=true \
+    -Dio.netty.noUnsafe=false \
     -Dio.netty.buffer.checkBounds=false \
     -Dio.netty.buffer.checkAccessible=false \
     " && \
